[project]
name = "led-cube-agent-monitor"
version = "0.1.0"
description = "Show live Codex and Claude session states on a 5x5x5 WLED cube"
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/pirate/led-cube-agent-monitor"
Repository = "https://github.com/pirate/led-cube-agent-monitor"

[project.scripts]
led-cube-agent-monitor = "agent_cube:main"
led-cube-agent-monitor-hook = "agent_cube:hook_main"
agent-cube = "agent_cube:main"
agent-cube-hook = "agent_cube:hook_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_cube.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
